Removed text-align rule of the entry/page asset widget. BugzID #102226

--- a/mt-static/css/structure.css
+++ b/mt-static/css/structure.css
@@ -2572,7 +2572,6 @@ ul#asset-list li {
 }
 ul#asset-list li#empty-asset-list { 
     padding-left: 0;
-    text-align: center;
 }
 
 ul#asset-list li a.asset-title { 
